--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo"> 
-							<img class="image" src="images/0.png" style="width:10.6rem;height:10.6rem" ></img>
+							<img class="image" src="images/0.png" style="width:10.7rem;height:10.7rem" ></img>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Clare Wethers</h1>
 								<h2><i>FINCA, University of Turku, Finland, FI-20014</i></h2><br />
-								<h3>Contact: </h3> <h2>clare.wethers@utu.fi</h2>	
+								<h3>Contact: </h3> <h2><a href = "mailto: clare.wethers@utu.fi">clare.wethers@utu.fi</a></h2>	
 								<p><br />
 								I am a postdoctoral research fellow studying the co-evolution of quasars and their hosts.<br />
 								I am particularly interested in understanding the relationship of star formation, dust and environment<br /> 
