--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Clare Wethers</h1>
-								<h2><i>FINCA, University of Turku, Finland, FI-20014</i></h2><br />
-								<h3>Contact: </h3> <h2><a href = "mailto: clare.wethers@utu.fi">clare.wethers@utu.fi</a></h2>	
+								<h2><i>CONquest team, Chalmers Universirt of Technology, Sweden, 412 96 Göteborg</i></h2><br />
+								<h3>Contact: </h3> <h2><a href = "mailto: wethers@chalmers.se">clare.wethers@utu.fi</a></h2>	
 								<p><br />
 								I am a postdoctoral research fellow studying the co-evolution of quasars and their hosts.
 								My research strives to understand the connection between star formation, quasar activity and galaxy environment to ultimately constrain models of galaxy evolution.<br /> 
