--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Clare Wethers</h1>
 								<h2><i>CONquest Team, Chalmers University of Technology, Sweden, 41296 Göteborg</i></h2><br />
-								<h3>Contact: </h3> <h2><a href = "mailto: wethers@chalmers.se">clare.wethers@utu.fi</a></h2>	
+								<h3>Contact: </h3> <h2><a href = "mailto: wethers@chalmers.se">wethers@chalmers.se</a></h2>	
 								<p><br />
 								I am a postdoctoral research fellow studying the co-evolution of quasars and their hosts.
 								My research strives to understand the connection between star formation, quasar activity and galaxy environment to ultimately constrain models of galaxy evolution.<br /> 
